security-groups.json
{
    "SecurityGroups": [
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "launch-wizard-1 created 2018-10-22T18:49:29.019-05:00", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-0bd8b56f5c5650be0"
                        }, 
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-0dca4ccd7fcabc0fc"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8080, 
                    "IpRanges": [], 
                    "ToPort": 8080, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-0bd8b56f5c5650be0"
                        }, 
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-0dca4ccd7fcabc0fc"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "dynacorp-Dynaprivate-apps", 
            "VpcId": "vpc-0545d6ed5b3938941", 
            "OwnerId": "955851341468", 
            "GroupId": "sg-014c3c1cdc47045f6"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "default VPC security group", 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-05231540c0860ed44"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "default", 
            "VpcId": "vpc-0545d6ed5b3938941", 
            "OwnerId": "955851341468", 
            "GroupId": "sg-05231540c0860ed44"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Allow access from Internet", 
            "Tags": [
                {
                    "Value": "dynacorp", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "DynaELBSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-2:955851341468:stack/dynacorp/8d559730-d64e-11e8-a83a-0adb59bdce1a", 
                    "Key": "aws:cloudformation:stack-id"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "dynacorp-DynaELBSecurityGroup-10QB95CJJXRWK", 
            "VpcId": "vpc-0545d6ed5b3938941", 
            "OwnerId": "955851341468", 
            "GroupId": "sg-055c4ffdc581327f2"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Allow access from HTTP and SSH traffic", 
            "Tags": [
                {
                    "Value": "DynaWebSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-2:955851341468:stack/dynacorp/8d559730-d64e-11e8-a83a-0adb59bdce1a", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "dynacorp", 
                    "Key": "aws:cloudformation:stack-name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-055c4ffdc581327f2"
                        }, 
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-0dca4ccd7fcabc0fc"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "140.209.25.32/32"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 6379, 
                    "IpRanges": [], 
                    "ToPort": 6379, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-0dca4ccd7fcabc0fc"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "dynacorp-DynaWebSecurityGroup-18TMLBG7E0QNN", 
            "VpcId": "vpc-0545d6ed5b3938941", 
            "OwnerId": "955851341468", 
            "GroupId": "sg-0bd8b56f5c5650be0"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Allow access from webservers Redis traffic", 
            "Tags": [
                {
                    "Value": "dynacorp", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-2:955851341468:stack/dynacorp/8d559730-d64e-11e8-a83a-0adb59bdce1a", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "DynacacheSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-0bd8b56f5c5650be0"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 6379, 
                    "IpRanges": [], 
                    "ToPort": 6379, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-0bd8b56f5c5650be0"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 11211, 
                    "IpRanges": [], 
                    "ToPort": 11211, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-0bd8b56f5c5650be0"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "dynacorp-DynacacheSecurityGroup-1TRGFSLCZB6BT", 
            "VpcId": "vpc-0545d6ed5b3938941", 
            "OwnerId": "955851341468", 
            "GroupId": "sg-0dca4ccd7fcabc0fc"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "default VPC security group", 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "955851341468", 
                            "GroupId": "sg-cc0fc9a5"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "default", 
            "VpcId": "vpc-d402f0bd", 
            "OwnerId": "955851341468", 
            "GroupId": "sg-cc0fc9a5"
        }
    ]
}
